--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 		"php": ">=5.4.0",
 		"titon/common": "*",
 		"titon/utility": "*",
-		"titon/route": "*"
+		"titon/route": "*",
+		"titon/http": "*"
 	},
 	"autoload": {
 		"psr-0": { "Titon\\View": "src/" }
