--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-	"name": "titon/view",
+	"name": "titon/mvc",
 	"type": "library",
-	"description": "The Titon view package adds support for template rendering and view helpers.",
-	"keywords": ["titon", "view", "engine", "helper", "mvc", "template"],
-	"homepage": "https://github.com/titon/Titon.View",
+	"description": "The Titon MVC package adds support for the Model-View-Controller paradigm.",
+	"keywords": ["titon", "model", "view", "controller", "action", "helper", "engine", "template"],
+	"homepage": "https://github.com/titon/Titon.MVC",
 	"license": "BSD-2-Clause",
 	"authors": [
 		{
@@ -19,6 +19,6 @@
 		"titon/http": "*"
 	},
 	"autoload": {
-		"psr-0": { "Titon\\View": "src/" }
+		"psr-0": { "Titon\\Mvc": "src/" }
 	}
 }
