--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
 		"php": ">=5.4.0",
 		"titon/view": "*",
 		"titon/controller": "*",
-		"titon/route": "*",
-		"titon/event": "*"
+		"titon/route": "*"
 	},
 	"require-dev": {
 		"titon/test": "*",
