--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ php:
   - 5.5
 
 before_script:
-  - composer install --dev
+  - composer selfupdate
+  - composer install
 
 notifications:
   email: false
