--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,7 @@
 		"titon/debug": "*"
 	},
 	"suggest": {
-		"titon/debug": "Enable the Debugger for error and exception handling",
-		"titon/model-mysql": "Enable MySQL database access",
-		"titon/model-sqlite": "Enable MySQL database access",
-		"titon/model-postgresql": "Enable MySQL database access",
-		"titon/model-mongodb": "Enable MongoDB database access"
+		"titon/debug": "Enable the Debugger for error and exception handling"
 	},
 	"autoload": {
 		"psr-0": { "Titon\\Mvc": "src/" }
